--- a/MorphTargetExample.xcodeproj/xcshareddata/xcschemes/MorphTargetExample.xcscheme
+++ b/MorphTargetExample.xcodeproj/xcshareddata/xcschemes/MorphTargetExample.xcscheme
@@ -63,7 +63,8 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       enableGPUFrameCaptureMode = "1"
-      enableGPUShaderValidationMode = "2"
+      showGraphicsOverview = "Yes"
+      logGraphicsOverview = "Yes"
       allowLocationSimulation = "YES">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
