--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
-xcuserdata
+.DS_Store
+/.build
+/Packages
+xcuserdata/
+DerivedData/
+.swiftpm/configuration/registries.json
+.swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
+.netrc
